# msk_lib-teste

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
ios/: msk.podspec
ios/Classes/: MskPlugin.h  MskPlugin.m  SwiftMskPlugin.swift
lib/: msk.dart
lib/src/: app.dart  src.dart
lib/src/core/: core.dart
lib/src/core/configs/: constants.dart
lib/src/core/exception/: exception.dart  fail_execute_op.dart
lib/src/core/extensions/: double_ex_msk.dart  extensions.dart  int_ex_msk.dart  string_ex_msk.dart
lib/src/core/http/: http.dart  intercept.dart  network.dart
lib/src/core/tests/: estrutura_sync.dart  tests.dart
lib/src/core/utils/: firebase_messaging.dart  migration.dart  utils.dart  utils_csv.dart  utils_data.dart  utils_db.dart  utils_export_file.dart  utils_feedback.dart  utils_file.dart  utils_firebase_file.dart  utils_format_msk.dart  utils_log.dart  utils_maps.dart  utils_menu.dart  utils_notificacao.dart  utils_pdf.dart  utils_register.dart  utils_select.dart  utils_tarefas.dart  utils_validate.dart  (+1 more)
lib/src/data/: data.dart
lib/src/models/: loginPageModels.dart
lib/src/presentation/: app_base_controller.dart  app_base_controller.g.dart  app_base_module.dart  app_base_widget.dart  presentation.dart
test/: msk_test.dart
test/core/di/: injection_container.dart
test/core/utils/: utils_db_test.dart
test/services/: atualizar_dados_service_test.dart
test/testes/: estrutura_sync_test.dart
windows/: CMakeLists.txt  msk_plugin.cpp
windows/include/msk/: msk_plugin.h
(+163 files in other folders)
